[project]
name = "zer0ne-scripts"
version = "0.1.0"
description = "Scripts duh"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.5",
    "capstone==6.0.0a5",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "colored-traceback==0.4.2",
    "cryptography==45.0.7",
    "easyocr==1.7.2",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "idna==3.10",
    "imageio==2.37.0",
    "intervaltree==3.1.0",
    "invoke==2.2.0",
    "jinja2==3.1.6",
    "lazy-loader==0.4",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "packaging==25.0",
    "paramiko==4.0.0",
    "pillow==11.3.0",
    "plumbum==1.9.0",
    "psutil==7.0.0",
    "pwntools==4.14.1",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "pycryptodomex==3.23.0",
    "pyelftools==0.32",
    "pygments==2.19.2",
    "pynacl==1.5.0",
    "pyserial==3.5",
    "pysocks==1.7.1",
    "pytesseract==0.3.13",
    "python-bidi==0.6.6",
    "python-dateutil==2.9.0.post0",
    "pywin32==311",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "ropgadget==7.6",
    "rpyc==6.0.2",
    "scikit-image==0.25.2",
    "scipy==1.16.1",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sympy==1.14.0",
    "tifffile==2025.8.28",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "typing-extensions==4.15.0",
    "unicorn==2.1.2",
    "unix-ar==0.2.1",
    "urllib3==2.5.0",
    "wheel==0.45.1",
    "zstandard==0.24.0",
]
